--- a/skeleton-starter-flow-spring-24/frontend/themes/my-theme/styles.css
+++ b/skeleton-starter-flow-spring-24/frontend/themes/my-theme/styles.css
@@ -10,6 +10,27 @@
   max-width: 250px;
 }
 
+.custom-text-field {
+    border-radius: 5px;
+}
+
+/* Estilo para los botones */
+.custom-button {
+    border-radius: 5px;
+}
+
+/* Estilo específico para el botón de inicio de sesión */
+.custom-button-primary {
+    background-color: #007bff;
+    color: white;
+}
+
+/* Estilo específico para el botón de registro */
+.custom-button-secondary {
+    background-color: #6c757d;
+    color: white;
+}
+
 /* Example: the style is applied only to the textfields which have the `bordered` class name. */
 vaadin-text-field.bordered::part(input-field) {
   box-shadow: inset 0 0 0 1px var(--lumo-contrast-30pct);
